deploy_knative.yaml
apiVersion: serving.knative.dev/v1 # Current version of Knative
kind: Service
metadata:
  name: time-service # The name of the app
  namespace: default # The namespace the app will use
  #labels:
  #  serving.knative.dev/visibility: "cluster-local"
spec:
  template:
    spec:
      containers:
        - image: docker.io/biandayu/simple-service # Reference to the image of the app
          env:
            - name: UPSTREAM # The environment variable printed out by the sample app
              value: "https://www.thecocktaildb.com/"
            - name: OPENTRACING_JAEGER_SERVICE_NAME
              value: "time-service"
            - name: OPENTRACING_JAEGER_ENABLED
              value: "true"
            - name: OPENTRACING_JAEGER_ENABLE-B3-PROPAGATION
              value: "true"
            - name: OPENTRACING_JAEGER_HTTP_SENDER_URL
              value: "http://zipkin.istio-system.svc:9441/api/traces"
            - name: OPENTRACING_JAEGER_PROBABILISTIC_SAMPLER_SAMPLING_RATE
              value: "1.0"
---
