deployment_call_kn.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: service-a
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: service-b
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: service-c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      name: service-a
      labels:
        app: service-a
        autotrace: enabled
    spec:
      containers:
        - name: service-a
          image: biandayu/simple-service
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      name: service-b
      labels:
        app: service-b
        autotrace: enabled
    spec:
      containers:
        - name: service-b
          image: biandayu/simple-service
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      name: service-c
      labels:
        app: service-c
        autotrace: enabled
    spec:
      containers:
        - name: service-c
          image: biandayu/simple-service
          imagePullPolicy: IfNotPresent
