webhook.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 5000
      name: https
  selector:
    app: auto-tracing-mutating-webhook

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-tracing-mutating-webhook
  template:
    metadata:
      name: auto-tracing-mutating-webhook
      labels:
        app: auto-tracing-mutating-webhook
    spec:
      containers:
        - name: auto-tracing-mutating-webhook
          image: k0diak/auto-tracing-webhook:latest
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: regcred
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
webhooks:
  - name: auto-tracing-mutating-webhook.istio-system.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lVUTZmcVZ6aWVpV1dodVBqTjh1dlMrSjIxdjR3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RXRNQ3NHQTFVRUF3d2tRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJFWlcxdgpJRU5CTUI0WERUSXdNRFl4TnpFME1EVXhORm9YRFRRM01URXdNekUwTURVeE5Gb3dMekV0TUNzR0ExVUVBd3drClFXUnRhWE56YVc5dUlFTnZiblJ5YjJ4c1pYSWdWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTBhYUZXRHlvbUl0aU1jbUlhV1BVank5dVA0RFNmWXZPcjdVOAphTXBoa3ZDdnVI [...]
      service:
        name: auto-tracing-mutating-webhook
        namespace: istio-system
        path: "/decorate"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        autotrace: enabled
